--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.4",
+    "express-session": "^1.17.1",
     "http-proxy-middleware": "^1.0.6",
     "mysql": "^2.18.1",
     "npm-run-all": "^4.1.5",
